--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,14 @@
-body { background: rgb(84, 42, 251); }
+
+@import "./blocks/main-header.less";
+
+@import "./blocks/page.less";
+
+@import "./blocks/main-nav.less";
+
+@import "./blocks/page-body.less";
+
+@import "./blocks/hero-block.less";
+
+@import "./blocks/advantages.less";
+
+@import "./blocks/call-to-action.less";
