--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -48,6 +48,21 @@
  &--img{
   padding: 0;
  }
+
+ &--home{
+  background-image: url(../../img/advantages-home.svg);
+  background-repeat: no-repeat;
+ }
+
+ &--food{
+  background-image: url(../../img/advantages-food.svg);
+  background-repeat: no-repeat;
+ }
+
+ &--gift{
+  background-image: url(../../img/advantages-gift.svg);
+  background-repeat: no-repeat;
+ }
 }
 
 .advantages__image{
