--- a/source/less/blocks/hero-block.less
+++ b/source/less/blocks/hero-block.less
@@ -1,7 +1,9 @@
 .hero-block {
-  background-image: url(/source/img/back-hero.jpg);
+  background-image: url(../../img/back-mobile-2x.jpg), url(../../img/text-index.svg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center center;
   background-color: gray;
+  min-width: 320px;
+  min-height: 389px;
 }
 
