--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,5 +1,14 @@
 .main-nav {
- background-color: #81B3D2;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  text-align: center;
+
+
+ &--burger-menu{
+  background-color: #81B3D2;
+  color: #fff;
+ }
 }
 .main-nav__list {
   margin: 0;
@@ -11,11 +20,8 @@
 }
 
 .main-nav-link {
-  font-size: 18px;
-  line-height: 26px;
-  font-weight: 700;
-  text-align: center;
-  color: #fff;
 }
 
-
+.main-nav__toogle{
+  
+}
