--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -3,25 +3,15 @@
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
+  text-transform: uppercase;
   max-width: 320px;
   margin: 0 auto;
+
+  background-color: #fff;
 }
 
 .link {
   text-decoration: none;
 }
 
-.visually-hidden {
-  display: none;
-}
 
-.button-primary{
-  background-color: #81B3D2;
-  color: #fff;
-  font-size: 21px;
-  line-height: 26px;
-  font-weight: 700;
-  text-align: center;
-  padding: 16px auto;
-  border: none;
-}
