--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,3 +12,7 @@
 @import "./blocks/advantages.less";
 
 @import "./blocks/call-to-action.less";
+
+@import "./blocks/button-primary.less";
+
+@import "./blocks/visually-hidden.less";
