--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,3 +16,9 @@
 @import "./blocks/button-primary.less";
 
 @import "./blocks/visually-hidden.less";
+
+@import "./blocks/main-footer.less";
+
+@import "./blocks/copyright.less";
+
+@import "./blocks/social-network.less";
