--- a/source/less/blocks/call-to-action.less
+++ b/source/less/blocks/call-to-action.less
@@ -1,8 +1,9 @@
-.call-to-action{
+.call-to-action__wrapper{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  padding: 39px 18px 49px 18px;
 }
 
 .call-to-action__title{
@@ -10,6 +11,8 @@
   line-height: 26px;
   font-weight: 700;
   text-align: center;
+  margin: 0;
+  margin-bottom: 20px;
 }
 
 .call-to-action__description {
@@ -17,4 +20,6 @@
   line-height: 21px;
   font-weight: 400;
   text-align: center;
+  margin: 0;
+  margin-bottom: 32px;
 }
