--- a/source/less/blocks/hero-block.less
+++ b/source/less/blocks/hero-block.less
@@ -1,5 +1,5 @@
 .hero-block {
-  background-image: url(../../img/back-mobile-2x.jpg), url(../../img/text-index.svg);
+  background-image: url(../../img/text-index.svg), url(../../img/back-mobile-2x.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-color: gray;
@@ -7,3 +7,9 @@
   min-height: 389px;
 }
 
+.hero-block__img{
+  background-image: url(../../img/separator-2.svg);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  height: 389px;
+}
