--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -4,10 +4,10 @@
   font-weight: 700;
   text-align: center;
 
-
  &--burger-menu{
   background-color: #81B3D2;
   color: #fff;
+  display: none;
  }
 }
 .main-nav__list {
@@ -17,11 +17,14 @@
 
 .main-nav__item {
   list-style-type: none;
+  padding-top: 17px;
+  padding-bottom: 12px;
 }
 
 .main-nav-link {
+  color: #fff;
 }
 
 .main-nav__toogle{
-  
+
 }
