--- a/source/less/blocks/button-primary.less
+++ b/source/less/blocks/button-primary.less
@@ -1,4 +1,5 @@
 .button-primary{
+  font-family: inherit;
   background-color: #81B3D2;
   color: #fff;
   font-size: 21px;
@@ -6,8 +7,9 @@
   font-weight: 700;
   text-transform: uppercase;
   text-align: center;
-  display: flex;
-  box-sizing: border-box;
-  padding: 16px auto;
   border: none;
+  padding: 0;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  min-width: 284px;
 }
