--- a/source/less/blocks/social-network.less
+++ b/source/less/blocks/social-network.less
@@ -9,7 +9,7 @@
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
-  max-width: 156px;
+  min-width: 156px;
 }
 
 .social-network__item{
@@ -20,10 +20,12 @@
 
 .social-network__icon{
   fill: #fff;
+}
+
+.social-network__link{
   display: flex;
   justify-content: center;
   align-items: center;
   width: 24px;
   height: 24px;
 }
-
