Вносит разметку каталога и формы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -24,3 +24,15 @@
 @import "./blocks/social-network.less";
 
 @import "./blocks/hero-block-inner.less";
+
+@import "./blocks/gallery-photo-intro.less";
+
+@import "./blocks/gallery-photo.less";
+
+@import "./blocks/video-block.less";
+
+@import "./blocks/before-text-block.less";
+
+@import "./blocks/form-feedback.less";
+
+@import "./blocks/input.less";
