--- a/source/less/blocks/hero-block-inner.less
+++ b/source/less/blocks/hero-block-inner.less
@@ -1,7 +1,15 @@
-.hero-block-inner{
-background-image: url(../../img/back-catalog.jpg), url(../../img/sedona.svg);
-background-repeat: no-repeat;
-background-position: center center;
-background-color: gray;
-min-height: 158px;
+.hero-block-inner {
+  background-image: url(../../img/sedona_hero.svg), url(../../img/back-hero-catalog.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: gray;
+  min-width: 320px;
+  min-height: 158px;
+}
+
+.hero-block-inner__img {
+  background-image: url(../../img/separator-2.svg);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  height: 158px;
 }
