--- a/source/less/style.less
+++ b/source/less/style.less
@@ -36,3 +36,7 @@
 @import "./blocks/form-feedback.less";
 
 @import "./blocks/input.less";
+
+@import "./blocks/choice-block.less";
+
+@import "./blocks/input-with-icon.less";
