--- a/source/less/blocks/hero-block-inner.less
+++ b/source/less/blocks/hero-block-inner.less
@@ -1,5 +1,5 @@
 .hero-block-inner {
-  background-image: url(../../img/sedona_hero.svg), url(../../img/back-hero-catalog.jpg);
+  background-image: url(../img/sedona_hero.svg), url(../img/back-hero-catalog.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-color: gray;
@@ -8,7 +8,7 @@
 }
 
 .hero-block-inner__img {
-  background-image: url(../../img/separator-2.svg);
+  background-image: url(../img/separator-2.svg);
   background-repeat: no-repeat;
   background-position: bottom;
   height: 158px;
