Форматирование файлов less

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,11 +1,11 @@
-.advantages{
+.advantages {
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
   text-align: center;
 }
 
-.advantages__list{
+.advantages__list {
   background-color: #fff;
   margin: 0;
   padding: 0;
@@ -23,7 +23,7 @@
   }
 }
 
-.advantages__title{
+.advantages__title {
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
@@ -36,7 +36,7 @@
     margin-bottom: 16px;
   }
 
-  &--intro{
+  &--intro {
     margin-bottom: 35px;
   }
 }
@@ -51,11 +51,10 @@
 }
 
 .advantages__item {
- list-style-type: none;
-
+  list-style-type: none;
 
   &--with-img {
-    background-color: #81B3D2;
+    background-color: #81b3d2;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -64,26 +63,25 @@
     padding: 37px 18px;
   }
 
-  &--img{
+  &--img {
     padding: 0;
     max-height: 260px;
   }
 
-  &--icon{
+  &--icon {
     display: flex;
     justify-content: flex-start;
     margin-bottom: 25px;
   }
 
-  &--icon:last-child{
+  &--icon:last-child {
     margin-bottom: 0;
   }
-
 }
 
-.advantages__separator{
+.advantages__separator {
   margin: 24px auto;
-  border-bottom: 1px #D6D6D6 solid;
+  border-bottom: 1px #d6d6d6 solid;
 }
 
 .advantages__image {
@@ -98,17 +96,17 @@
   padding-top: 8px;
 }
 
-.advantages__icon{
+.advantages__icon {
   margin-right: 7px;
 }
 
-.advantages__intro{
+.advantages__intro {
   padding: 32px 18px 16px 18px;
   display: flex;
   flex-direction: column;
 }
 
-.advantages__decor{
+.advantages__decor {
   background-image: url(../../img/separator.svg);
   background-repeat: no-repeat;
   height: 37px;
