--- a/source/less/blocks/button-primary.less
+++ b/source/less/blocks/button-primary.less
@@ -1,6 +1,6 @@
-.button-primary{
+.button-primary {
   font-family: inherit;
-  background-color: #81B3D2;
+  background-color: #81b3d2;
   color: #fff;
   font-size: 21px;
   line-height: 26px;
