--- a/source/less/blocks/choice-block.less
+++ b/source/less/blocks/choice-block.less
@@ -1,4 +1,4 @@
-.choice-block{
+.choice-block {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -6,27 +6,27 @@
   order: revert;
 }
 
-.choice-block__label{
+.choice-block__label {
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
   text-transform: none;
 }
 
-.choice-block__radio{
+.choice-block__radio {
   width: 46px;
   height: 46px;
   margin: 0;
   margin-right: 16px;
   position: relative;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   border: none;
   border-radius: 50%;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
 
-  &:checked::after{
+  &:checked::after {
     content: "";
     width: 16px;
     height: 16px;
@@ -38,13 +38,13 @@
   }
 }
 
-.choice-block__check{
+.choice-block__check {
   width: 46px;
   height: 46px;
   margin: 0;
   margin-right: 16px;
   position: relative;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   border: none;
   border-radius: 4px;
   position: relative;
@@ -52,7 +52,7 @@
   -moz-appearance: none;
   appearance: none;
 
-  &:checked::after{
+  &:checked::after {
     background-image: url(../img/tick.svg);
     background-repeat: no-repeat;
     background-position: center;
