--- a/source/less/blocks/form-feedback.less
+++ b/source/less/blocks/form-feedback.less
@@ -1,13 +1,13 @@
-.form-feedback__wrapper{
+.form-feedback__wrapper {
   margin: 0;
   padding-top: 24px;
 }
 
-.form-feedback__block{
+.form-feedback__block {
   border: none;
   margin: 0;
   padding: 24px 20px 39px 20px;
-  border-bottom: 1px #E5E5E5 solid;
+  border-bottom: 1px #e5e5e5 solid;
   appearance: none;
   display: flex;
   flex-direction: column;
@@ -15,12 +15,12 @@
   align-items: center;
   box-sizing: border-box;
 
-  &--no-border{
+  &--no-border {
     border-bottom: none;
   }
 }
 
-.form-feedback__title{
+.form-feedback__title {
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
@@ -30,7 +30,7 @@
   margin-bottom: 20px;
 }
 
-.form-feedback__list{
+.form-feedback__list {
   padding: 0;
   margin: 0;
   display: flex;
@@ -39,16 +39,16 @@
   align-items: flex-start;
 }
 
-.form-feedback__item{
+.form-feedback__item {
   list-style-type: none;
   margin-bottom: 16px;
 
-  &:last-child{
+  &:last-child {
     margin-bottom: 0;
   }
 }
 
-.form-feedback__block-button{
+.form-feedback__block-button {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -57,7 +57,7 @@
   margin: 0 20px 24px 20px;
 }
 
-.form-feedback__hint{
+.form-feedback__hint {
   text-align: right;
   min-width: 280px;
   color: rgba(51, 51, 51, 0.6);
