--- a/source/less/blocks/gallery-photo-intro.less
+++ b/source/less/blocks/gallery-photo-intro.less
@@ -1,10 +1,10 @@
-.gallery-photo__intro{
+.gallery-photo__intro {
   padding: 30px 20px 17px 20px;
   display: flex;
   flex-direction: column;
-  border-bottom: 1px #E5E5E5 solid;
+  border-bottom: 1px #e5e5e5 solid;
 }
-.gallery-photo__title{
+.gallery-photo__title {
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
