--- a/source/less/blocks/gallery-photo.less
+++ b/source/less/blocks/gallery-photo.less
@@ -1,4 +1,4 @@
-.gallery-photo{
+.gallery-photo {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -7,30 +7,30 @@
   margin: 0;
 }
 
-.gallery-photo__item{
+.gallery-photo__item {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   margin: 0;
   padding: 24px 20px 25px 20px;
-  border-bottom: 1px #E5E5E5 solid;
+  border-bottom: 1px #e5e5e5 solid;
 }
 
-.gallery-photo__list{
+.gallery-photo__list {
   padding: 0;
   margin: 0;
   min-width: 280px;
 }
 
-.gallery-photo__name-card{
+.gallery-photo__name-card {
   font-size: 14px;
   line-height: 21px;
   font-weight: 700;
   margin: 0;
 }
 
-.gallery-photo__author{
+.gallery-photo__author {
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
@@ -42,27 +42,27 @@
   margin-bottom: 11px;
 }
 
-.gallery-photo__author-name{
+.gallery-photo__author-name {
   margin: 0;
 }
 
-.gallery-photo__author-label{
+.gallery-photo__author-label {
   margin-right: 4px;
 }
 
-.gallery-photo__number{
+.gallery-photo__number {
   font-size: 14px;
   line-height: 21px;
   font-weight: 700;
   margin: 0;
 }
 
-.gallery-photo__img{
+.gallery-photo__img {
   margin: 0;
   margin-bottom: 15px;
 }
 
-.gallery-photo__like-icon{
+.gallery-photo__like-icon {
   margin: 0;
   margin-right: 14px;
 }
