--- a/source/less/blocks/hero-block-inner.less
+++ b/source/less/blocks/hero-block-inner.less
@@ -1,5 +1,6 @@
 .hero-block-inner {
-  background-image: url(../img/sedona_hero.svg), url(../img/back-hero-catalog.jpg);
+  background-image: url(../img/sedona_hero.svg),
+    url(../img/back-hero-catalog.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-color: gray;
