--- a/source/less/blocks/input-with-icon.less
+++ b/source/less/blocks/input-with-icon.less
@@ -1,17 +1,16 @@
-.input-with-icon{
+.input-with-icon {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-
 }
 
-.input-with-icon__container{
+.input-with-icon__container {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
 }
 
-.input-with-icon__phone{
+.input-with-icon__phone {
   background-image: url(../img/phone.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -19,11 +18,11 @@
   padding: 20px;
   width: 18px;
   height: 18px;
-  background-color: #E6E6E6;
+  background-color: #e6e6e6;
   margin: 0;
 }
 
-.input-with-icon__mail{
+.input-with-icon__mail {
   background-image: url(../img/mail.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -31,9 +30,6 @@
   padding: 20px;
   width: 18px;
   height: 18px;
-  background-color: #E6E6E6;
+  background-color: #e6e6e6;
   margin: 0;
 }
-
-
-
