--- a/source/less/blocks/input.less
+++ b/source/less/blocks/input.less
@@ -3,22 +3,22 @@
   flex-direction: column;
 }
 
-.input__label{
+.input__label {
   color: #333333;
   padding-left: 16px;
 }
 
-.input__input{
+.input__input {
   font-family: "PT Sans";
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
   min-width: 248px;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   border: none;
   padding: 16px;
 
-  &::placeholder{
+  &::placeholder {
     font-family: "PT Sans";
     font-size: 18px;
     line-height: 26px;
@@ -26,11 +26,11 @@
     color: #000;
   }
 
-  &--with-icon{
+  &--with-icon {
     min-width: auto;
   }
 
-  &--with-icon::placeholder{
+  &--with-icon::placeholder {
     color: rgba(0, 0, 0, 0.3);
     font-family: "PT Sans";
     font-size: 18px;
@@ -38,13 +38,13 @@
     font-weight: 700;
   }
 
-  &--area{
+  &--area {
     border: none;
     overflow: auto;
     outline: none;
   }
 
-  &--area::placeholder{
+  &--area::placeholder {
     color: rgba(0, 0, 0, 0.3);
     font-family: "PT Sans";
     font-size: 18px;
