--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -4,11 +4,11 @@
   font-weight: 700;
   text-align: center;
 
- &--burger-menu{
-  background-color: #81B3D2;
-  color: #fff;
-  display: none;
- }
+  &--burger-menu {
+    background-color: #81b3d2;
+    color: #fff;
+    display: none;
+  }
 }
 .main-nav__list {
   margin: 0;
@@ -23,8 +23,4 @@
 
 .main-nav-link {
   color: #fff;
-}
-
-.main-nav__toogle{
-
 }
