--- a/source/less/blocks/before-text-block.less
+++ b/source/less/blocks/before-text-block.less
@@ -2,7 +2,7 @@
   padding: 36px 20px 28px 20px;
   display: flex;
   flex-direction: column;
-  border-bottom: 1px #E5E5E5 solid;
+  border-bottom: 1px #e5e5e5 solid;
 }
 
 .before-text-block__title {
