Форматирование файла social-network.less

--- a/source/less/blocks/social-network.less
+++ b/source/less/blocks/social-network.less
@@ -1,4 +1,4 @@
-.social-network__list{
+.social-network__list {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -8,17 +8,17 @@
   min-width: 156px;
 }
 
-.social-network__item{
- list-style-type: none;
- padding: 12px;
- background-color: #81B3D2;
+.social-network__item {
+  list-style-type: none;
+  padding: 12px;
+  background-color: #81b3d2;
 }
 
-.social-network__icon{
+.social-network__icon {
   fill: #fff;
 }
 
-.social-network__link{
+.social-network__link {
   display: flex;
   justify-content: center;
   align-items: center;
