--- a/source/less/blocks/button-primary.less
+++ b/source/less/blocks/button-primary.less
@@ -1,7 +1,7 @@
 .button-primary {
   font-family: inherit;
   background-color: #81b3d2;
-  color: #fff;
+  color: #ffffff;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
