--- a/source/less/blocks/input-with-icon.less
+++ b/source/less/blocks/input-with-icon.less
@@ -11,10 +11,10 @@
 }
 
 .input-with-icon__phone {
-  background-image: url(../img/phone.svg);
+  background-image: url("../img/phone.svg");
   background-repeat: no-repeat;
   background-position: center;
-  fill: #000;
+  fill: #000000;
   padding: 20px;
   width: 18px;
   height: 18px;
@@ -23,10 +23,10 @@
 }
 
 .input-with-icon__mail {
-  background-image: url(../img/mail.svg);
+  background-image: url("../img/mail.svg");
   background-repeat: no-repeat;
   background-position: center;
-  fill: #000;
+  fill: #000000;
   padding: 20px;
   width: 18px;
   height: 18px;
