--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -6,10 +6,11 @@
 
   &--burger-menu {
     background-color: #81b3d2;
-    color: #fff;
+    color: #ffffff;
     display: none;
   }
 }
+
 .main-nav__list {
   margin: 0;
   padding: 0;
@@ -22,5 +23,5 @@
 }
 
 .main-nav-link {
-  color: #fff;
+  color: #ffffff;
 }
