--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -6,14 +6,15 @@
 }
 
 .advantages__list {
-  background-color: #fff;
+  background-color: #ffffff;
   margin: 0;
   padding: 0;
 
   &--gray {
-    background-color: #eee;
+    background-color: #eeeeee;
     padding: 24px 18px 28px 18px;
   }
+
   &--icons {
     padding: 23px 18px 46px 18px;
     display: flex;
@@ -55,7 +56,7 @@
 
   &--with-img {
     background-color: #81b3d2;
-    color: #fff;
+    color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -107,7 +108,7 @@
 }
 
 .advantages__decor {
-  background-image: url(../../img/separator.svg);
+  background-image: url("../../img/separator.svg");
   background-repeat: no-repeat;
   height: 37px;
 }
