--- a/source/less/blocks/choice-block.less
+++ b/source/less/blocks/choice-block.less
@@ -3,7 +3,6 @@
   justify-content: flex-start;
   align-items: center;
   min-width: 280px;
-  order: revert;
 }
 
 .choice-block__label {
@@ -47,13 +46,12 @@
   background-color: #f2f2f2;
   border: none;
   border-radius: 4px;
-  position: relative;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
 
   &:checked::after {
-    background-image: url(../img/tick.svg);
+    background-image: url("../img/tick.svg");
     background-repeat: no-repeat;
     background-position: center;
     top: 14px;
