--- a/source/less/blocks/input.less
+++ b/source/less/blocks/input.less
@@ -9,7 +9,7 @@
 }
 
 .input__input {
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
@@ -19,11 +19,10 @@
   padding: 16px;
 
   &::placeholder {
-    font-family: "PT Sans";
     font-size: 18px;
     line-height: 26px;
     font-weight: 700;
-    color: #000;
+    color: #000000;
   }
 
   &--with-icon {
@@ -32,7 +31,6 @@
 
   &--with-icon::placeholder {
     color: rgba(0, 0, 0, 0.3);
-    font-family: "PT Sans";
     font-size: 18px;
     line-height: 26px;
     font-weight: 700;
@@ -46,7 +44,6 @@
 
   &--area::placeholder {
     color: rgba(0, 0, 0, 0.3);
-    font-family: "PT Sans";
     font-size: 18px;
     line-height: 26px;
     font-weight: 700;
