--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -6,8 +6,7 @@
   text-transform: uppercase;
   max-width: 320px;
   margin: 0 auto;
-
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .link {
