Вносит разметку хедера и меню

--- a/source/less/blocks/hero-block.less
+++ b/source/less/blocks/hero-block.less
@@ -11,6 +11,6 @@
 .hero-block__img {
   background-image: url("../../img/separator-2.svg");
   background-repeat: no-repeat;
-  background-position: bottom;
+  background-position: center bottom;
   height: 389px;
 }
