--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -3,6 +3,10 @@
   line-height: 21px;
   font-weight: 400;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .advantages__list {
@@ -110,5 +114,6 @@
 .advantages__decor {
   background-image: url("../../img/separator.svg");
   background-repeat: no-repeat;
+  background-position: center;
   height: 37px;
 }
