--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,12 +1,35 @@
 .main-header {
   background-color: rgb(255, 255, 255);
-  margin: 0 18px;
+  margin: 0;
   padding: 0;
+  position: relative;
+  min-width: 320px;
+}
+
+.main-header__wrapper {
   max-height: 56px;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 0 18px;
 }
 
 .main-header__logo {
   margin-bottom: -40px;
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.main-header__toogle {
+  background-color: #ffffff;
+  border: none;
+  background-image: url("../../img/icon-menu.svg");
+  background-repeat: no-repeat;
+  width: 23px;
+  height: 22px;
+  position: absolute;
+  top: 17px;
+  right: 18px;
+  padding: 0;
 }
