--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -8,20 +8,48 @@
     background-color: #81b3d2;
     color: #ffffff;
     display: none;
+    min-width: 320px;
+    padding: 0;
+    margin: 0 auto;
+    position: absolute;
+    top: 0;
   }
 }
 
 .main-nav__list {
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .main-nav__item {
   list-style-type: none;
-  padding-top: 17px;
-  padding-bottom: 12px;
+  min-width: 320px;
+  min-height: 55px;
+  box-shadow: 0 0 1px 0 rgba(1, 1, 1, 0.2), inset 0 1px 0 0 rgba(255, 255, 255, 0.2);
+
+  &:last-child {
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0));
+    background-repeat: no-repeat;
+    background-size: auto 7px;
+    background-position: bottom;
+  }
+
+  &:first-child {
+    background-image: url("../../img/icon-cross.svg");
+    background-repeat: no-repeat;
+    background-position: top 17px right 18px;
+  }
 }
 
 .main-nav-link {
+  padding-top: 17px;
+  padding-bottom: 12px;
   color: #ffffff;
+  margin: auto;
+  display: block;
 }
