--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -4,9 +4,12 @@
   line-height: 21px;
   font-weight: 400;
   text-transform: uppercase;
-  max-width: 320px;
+  width: 320px;
+  min-height: 100%;
   margin: 0 auto;
   background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
 }
 
 .link {
