--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -4,12 +4,10 @@
   line-height: 21px;
   font-weight: 400;
   text-transform: uppercase;
-  width: 320px;
   min-height: 100%;
-  margin: 0 auto;
+  min-width: 320px;
   background-color: #ffffff;
-  display: flex;
-  flex-direction: column;
+  margin: 0;
 }
 
 .link {
