--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  width: auto;
 }
 
 .advantages__list {
@@ -105,15 +106,25 @@
   margin-right: 7px;
 }
 
-.advantages__intro {
-  padding: 32px 18px 16px 18px;
-  display: flex;
-  flex-direction: column;
-}
+@media (min-width: @tablet-width) {
+  .advantages__list {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    min-width: 768px;
+  }
 
-.advantages__decor {
-  background-image: url("../../img/separator.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 37px;
+  &--icons {
+    padding: 23px 18px 46px 18px;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    min-width: 768px;
+  }
+
+  &--with-img {
+    min-height: 117px;
+    padding: 37px 18px;
+    max-width: 256px;
+  }
 }
