--- a/source/less/blocks/gallery-photo.less
+++ b/source/less/blocks/gallery-photo.less
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   padding: 0;
   margin: 0;
 }
@@ -20,7 +20,6 @@
 .gallery-photo__list {
   padding: 0;
   margin: 0;
-  min-width: 280px;
 }
 
 .gallery-photo__name-card {
