--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,5 +1,8 @@
 .page {
   background-color: #f2f2f2;
-  min-width: 320px;
   height: 100%;
 }
+
+@tablet-width: 768px;
+@desktop-width: 1280px;
+@mobile-width-only: 767px;
