--- a/source/less/style.less
+++ b/source/less/style.less
@@ -20,3 +20,5 @@
 @import "./blocks/choice-block.less";
 @import "./blocks/input-with-icon.less";
 @import "./fonts.less";
+@import "./blocks/close-button.less";
+@import "./blocks/prologue.less";
