Добавляет медиа-выражения для планшетной версии главной страницы

--- a/source/less/blocks/call-to-action.less
+++ b/source/less/blocks/call-to-action.less
@@ -7,19 +7,18 @@
 }
 
 .call-to-action__title {
-  font-size: 21px;
-  line-height: 26px;
-  font-weight: 700;
-  text-align: center;
   margin: 0;
   margin-bottom: 20px;
 }
 
 .call-to-action__description {
-  font-size: 14px;
-  line-height: 21px;
-  font-weight: 400;
-  text-align: center;
   margin: 0;
   margin-bottom: 32px;
+}
+
+@media (min-width: @tablet-width) {
+  .call-to-action__wrapper {
+    padding: 61px 155px 58px 155px;
+    min-width: 458px;
+  }
 }
