--- a/source/less/style.less
+++ b/source/less/style.less
@@ -22,3 +22,5 @@
 @import "./fonts.less";
 @import "./blocks/close-button.less";
 @import "./blocks/prologue.less";
+@import "./blocks/description.less";
+@import "./blocks/title.less";
