--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,6 +1,4 @@
 .advantages {
-  font-size: 14px;
-  line-height: 21px;
   font-weight: 400;
   text-align: center;
   display: flex;
@@ -17,7 +15,10 @@
 
   &--gray {
     background-color: #eeeeee;
-    padding: 24px 18px 28px 18px;
+    padding: 0 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
   }
 
   &--icons {
@@ -26,33 +27,6 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-  }
-}
-
-.advantages__title {
-  font-size: 18px;
-  line-height: 26px;
-  font-weight: 700;
-  text-align: center;
-  padding: 0;
-  margin: 0;
-
-  &--align-left {
-    text-align: left;
-    margin-bottom: 16px;
-  }
-
-  &--intro {
-    margin-bottom: 35px;
-  }
-}
-
-.advantages__description {
-  padding: 0;
-  margin: 0;
-
-  &--align-left {
-    text-align: left;
   }
 }
 
@@ -77,11 +51,17 @@
   &--icon {
     display: flex;
     justify-content: flex-start;
-    margin-bottom: 25px;
+    padding: 12px 18px;
   }
 
-  &--icon:last-child {
-    margin-bottom: 0;
+  &--gray {
+    padding: 24px 0;
+    background-color: #eeeeee;
+    border-bottom: 1px rgba(214, 214, 214, 1) solid;
+  }
+
+  &--gray:last-child {
+    border-bottom: none;
   }
 }
 
@@ -110,21 +90,54 @@
   .advantages__list {
     display: flex;
     justify-content: flex-start;
+    align-items: center;
+    flex-basis: auto;
     flex-wrap: wrap;
-    min-width: 768px;
+    max-width: 768px;
   }
 
-  &--icons {
-    padding: 23px 18px 46px 18px;
+  .advantages__item--with-img {
+    padding: 42px 33px;
+    width: 190px;
+    min-height: 173px;
+  }
+
+  .advantages__item--img {
+    padding: 0;
+    max-width: 512px;
+  }
+
+  .advantages__item--icon {
+    padding: 60px 33px;
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
-    flex-wrap: wrap;
-    min-width: 768px;
+    align-items: center;
+    width: 190px;
+    min-height: 210px;
   }
 
-  &--with-img {
-    min-height: 117px;
-    padding: 37px 18px;
-    max-width: 256px;
+  .advantages__icon {
+    margin-right: 0;
+    margin-bottom: 26px;
+  }
+
+  .advantages__list--gray {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    margin: 0;
+  }
+
+  .advantages__item--gray {
+    width: 256px;
+    min-height: 256px;
+    padding: 0 33px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    box-sizing: border-box;
+    border-bottom: none;
   }
 }
