--- a/source/less/blocks/prologue.less
+++ b/source/less/blocks/prologue.less
@@ -1,8 +1,11 @@
 .prologue {
-  padding: 32px 18px 0 18px;
   width: auto;
   display: flex;
   flex-direction: column;
+}
+
+.prologue__content {
+  padding: 32px 18px 16px 18px;
 }
 
 .prologue__decor {
@@ -10,4 +13,15 @@
   background-repeat: no-repeat;
   background-position: center;
   height: 37px;
+}
+
+@media (min-width: @tablet-width) {
+  .prologue__decor {
+    display: none;
+  }
+
+  .prologue__content {
+    padding: 48px 124px 56px 124px;
+    min-width: 520px;
+  }
 }
