--- a/source/less/blocks/title.less
+++ b/source/less/blocks/title.less
@@ -21,6 +21,10 @@
     font-weight: 700;
     text-align: center;
   }
+
+  &--form-feedback {
+    margin-bottom: 20px;
+  }
 }
 
 @media (min-width: @tablet-width) {
@@ -36,5 +40,9 @@
   .title--large {
     font-size: 30px;
     line-height: 26px;
+  }
+
+  .title--form-feedback {
+    margin-bottom: 28px;
   }
 }
