--- a/source/less/blocks/video-block.less
+++ b/source/less/blocks/video-block.less
@@ -19,3 +19,12 @@
   margin: 0;
   text-align: center;
 }
+
+@media (min-width: @tablet-width) {
+  .video-block__wrapper {
+    padding-top: 57px;
+    padding-bottom: 65px;
+    margin: 0 auto;
+    max-width: 648px;
+  }
+}
