--- a/source/less/style.less
+++ b/source/less/style.less
@@ -24,3 +24,4 @@
 @import "./blocks/prologue.less";
 @import "./blocks/description.less";
 @import "./blocks/title.less";
+@import "./blocks/contact-map.less";
