--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -135,7 +135,7 @@
     padding: 0 33px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     box-sizing: border-box;
     border-bottom: none;
