--- a/source/less/blocks/before-text-block.less
+++ b/source/less/blocks/before-text-block.less
@@ -20,3 +20,14 @@
   margin: 0;
   text-align: center;
 }
+
+@media (min-width: @tablet-width) {
+  .before-text-block {
+    padding: 64px 0 102px 0;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 0;
+    max-width: 648px;
+    margin: 0 auto;
+  }
+}
