--- a/source/less/blocks/gallery-photo.less
+++ b/source/less/blocks/gallery-photo.less
@@ -7,13 +7,18 @@
   margin: 0;
 }
 
+.gallery-photo__intro {
+  padding: 30px 0 17px 0;
+  margin: 0 20px;
+}
+
 .gallery-photo__item {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   margin: 0;
-  padding: 24px 20px 25px 20px;
+  padding: 24px 20px 0 20px;
   border-bottom: 1px #e5e5e5 solid;
 }
 
@@ -29,6 +34,23 @@
   margin: 0;
 }
 
+.gallery-photo__data {
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-top: 15px;
+  padding-bottom: 25px;
+  min-width: auto;
+}
+
+.gallery-photo__description {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-bottom: 11px;
+}
+
 .gallery-photo__author {
   font-size: 14px;
   line-height: 21px;
@@ -38,7 +60,6 @@
   justify-content: flex-start;
   align-items: center;
   margin: 0;
-  margin-bottom: 11px;
 }
 
 .gallery-photo__author-name {
@@ -58,10 +79,63 @@
 
 .gallery-photo__img {
   margin: 0;
-  margin-bottom: 15px;
 }
 
 .gallery-photo__like-icon {
   margin: 0;
   margin-right: 14px;
+}
+
+@media (min-width: @tablet-width) {
+  .gallery-photo {
+    max-width: 648px;
+    margin: 0 auto;
+  }
+
+  .gallery-photo__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-basis: auto;
+    flex-wrap: wrap;
+  }
+
+  .gallery-photo__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+    margin: 0;
+    padding: 0;
+    border-bottom: 0;
+    flex-grow: 1;
+  }
+
+  .gallery-photo__item:first-child {
+    width: 648px;
+    height: 480px;
+  }
+
+  .gallery-photo__item:nth-child(3) .gallery-photo__data {
+    background-color: #eaeaea;
+  }
+
+  .gallery-photo__data {
+    background-color: #f2f2f2;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 22px 20px 15px 20px;
+    margin: 0;
+    width: auto;
+  }
+
+  .gallery-photo__intro {
+    padding: 66px 95px 67px 95px;
+    margin: 0;
+    max-width: 648px;
+    border: none;
+  }
 }
