--- a/source/less/blocks/hero-block.less
+++ b/source/less/blocks/hero-block.less
@@ -9,8 +9,19 @@
 }
 
 .hero-block__img {
-  background-image: url("../../img/separator-2.svg");
+  background-image: url("../../img/intro-triangle.svg");
   background-repeat: no-repeat;
   background-position: center bottom;
   height: 389px;
+}
+
+@media (min-width: @tablet-width) {
+  .hero-block {
+    min-width: 768px;
+    min-height: 518px;
+  }
+
+  .hero-block__img {
+    height: 518px;
+  }
 }
