Вносит изменения в разметку

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -25,3 +25,4 @@
 @import "./blocks/description.less";
 @import "./blocks/title.less";
 @import "./blocks/contact-map.less";
+@import "./blocks/separator-horizont.less";
