--- a/source/less/blocks/form-feedback.less
+++ b/source/less/blocks/form-feedback.less
@@ -30,6 +30,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  row-gap: 16px;
 }
 
 .form-feedback__item {
@@ -84,6 +85,7 @@
     align-items: center;
     box-sizing: border-box;
     flex-grow: 1;
+    row-gap: 16px;
   }
 
   .form-feedback__separator {
@@ -93,23 +95,28 @@
     height: 338px;
   }
 
-  .form-feedback__list--inputs {
-    max-width: 280px;
-  }
-
-  .form-feedback__list--choice {
+  .form-feedback__list--radio {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
-    row-gap: 0;
+    column-gap: 16px;
+    row-gap: 16px;
     max-height: 108px;
     max-width: 576px;
     margin: 0 auto;
   }
 
-  .form-feedback__list--choice .check {
+  .form-feedback__list--check {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    column-gap: 32px;
+    row-gap: 16px;
+    max-height: 108px;
     max-width: 480px;
+    margin: 0 auto;
   }
 
   .form-feedback__block--no-border {
@@ -123,5 +130,27 @@
     align-items: center;
     min-width: 648px;
     margin: 0;
+  }
+
+  .form-feedback__button {
+    width: 50%;
+  }
+
+  .form-feedback__title-block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 28px;
+    width: 648px;
+  }
+
+  .form-feedback__title {
+    flex-grow: 1;
+  }
+
+  .form-feedback__item {
+    list-style-type: none;
+    margin-bottom: 0;
+    flex-grow: 1;
   }
 }
