--- a/source/less/blocks/input.less
+++ b/source/less/blocks/input.less
@@ -15,6 +15,7 @@
   font-weight: 700;
   min-width: 248px;
   background-color: #f2f2f2;
+  color: rgba(0, 0, 0, 0.3);
   border: none;
   padding: 16px;
 
@@ -47,5 +48,12 @@
     font-size: 18px;
     line-height: 26px;
     font-weight: 700;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .input__input--area {
+    min-width: 616px;
+    height: 128px;
   }
 }
