--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -3,16 +3,19 @@
   line-height: 26px;
   font-weight: 700;
   text-align: center;
+}
 
-  &--burger-menu {
-    background-color: #81b3d2;
-    color: #ffffff;
-    display: none;
-    padding: 0;
-    margin: 0 auto;
-    position: absolute;
-    top: 0;
-  }
+.main-nav__burger-menu {
+  background-color: #81b3d2;
+  color: #ffffff;
+  display: block;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transform: translate(-100%);
 }
 
 .main-nav__list {
@@ -27,7 +30,7 @@
 
 .main-nav__item {
   list-style-type: none;
-  min-width: 320px;
+  width: 100%;
   min-height: 55px;
   box-shadow: 0 0 1px 0 rgba(1, 1, 1, 0.2), inset 0 1px 0 0 rgba(255, 255, 255, 0.2);
 
@@ -57,13 +60,30 @@
 .main-nav__toogle {
   background-color: #ffffff;
   border: none;
-  background-image: url("../../img/icon-menu.svg");
-  background-repeat: no-repeat;
-  color: #81b3d2;
   width: 23px;
   height: 22px;
-  position: absolute;
-  top: 17px;
-  right: 18px;
+  display: block;
+  position: relative;
   padding: 0;
+  margin: 0;
+  z-index: 2;
+  opacity: 0;
+}
+
+.line {
+  display: block;
+  height: 4px;
+  width: 23px;
+  background-color: rgb(128, 178, 209);
+}
+
+.main-nav__hamburger-lines {
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+  position: absolute;
+}
+
+.main-header__wrapper input[type="checkbox"]:checked ~ .main-nav__burger-menu {
+  transform: translateX(0);
 }
