--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -13,3 +13,11 @@
 .link {
   text-decoration: none;
 }
+
+@media (min-width: @desktop-width) {
+  .page__body {
+    width: 1200px;
+    margin: 0 auto;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  }
+}
