--- a/source/less/blocks/hero-block.less
+++ b/source/less/blocks/hero-block.less
@@ -6,10 +6,11 @@
   background-color: #808080;
   min-width: 320px;
   min-height: 389px;
+  background-size: contain cover;
 }
 
 .hero-block__img {
-  background-image: url("../../img/intro-triangle.svg");
+  background-image: url("../../img/intro-triangle-hero.svg");
   background-repeat: no-repeat;
   background-position: center bottom;
   height: 389px;
