--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -4,3 +4,10 @@
   margin: 0;
   padding: 0;
 }
+
+@media (min-width: @desktop-width) {
+  .main-container {
+    width: 1200px;
+    margin: 0 auto;
+  }
+}
